Fixed contrast error

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -580,7 +580,7 @@ body {
 
 .footer-tagline {
     font-size: x-small;
-    color: rgba(255,255,255,0.5);
+    color: rgba(255,255,255,0.7);
     margin: 0;
 }
 
